fix: add flex wrap

--- a/src/component/feature/strategy/strategy.module.scss
+++ b/src/component/feature/strategy/strategy.module.scss
@@ -114,6 +114,7 @@
 
 .strategyListCards {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     margin: 2rem 0;
 }
